argocd-app-of-apps/cluster/irish-sea/pipelines-as-code/manifests/Ingress.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: tekton-pac-ingressroute
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`tekton-pac.olaf-radicke.de`)
#       kind: Rule
#       services:
#         - name: tekton-pac
#           port: 80
#       middlewares:
#         - name: tekton-pac

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-tekton-pac-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    # - match: Host(`https://tekton-pac.olaf-radicke.de`) && PathPrefix(`/`)
    - match: Host(`tekton-pac.olaf-radicke.de`)
      kind: Rule
      services:
        - name: pipelines-as-code-controller
          namespace: pipelines-as-code
          port: 8080
  tls:
    secretName: tekton-pac

# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: tekton-pac
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
